# wasm-game-of-life

./: Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
js/: game.js  index.js  life.js  main.js
src/: lib.rs
static/: index.html  style.css
tests/: app.rs  web.rs
