[package]
name = "wasm-game-of-life"
description = "Game of life implementation using rust-generated WebAssembly."
version = "0.1.0"
authors = ["Roi Martin <jroi.martin@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = "0.2.88"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.65"

[dev-dependencies]
futures = "0.3.29"
wasm-bindgen-test = "0.3.38"
wasm-bindgen-futures = "0.4.38"
